@@ -8,6 +8,7 @@
 	  table format in random section
 	* term/lua/gnuplot-tikz.help term/lua/gnuplot-tikz.lua: balance
 	  backquotes in gnuplot help.
+	* src/win/wgraph.c: reorder entries of the graph popup menu
 
 2011-02-21  Peter Hedwig <peter@affenbande.org>
 
